<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RelativeLayout
            android:id="@+id/login_title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/login_tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:drawableLeft="@drawable/btn_back_no_shaddow"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/btn_back_no_shaddow"
                android:textColor="@color/colorTransparentGray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/fragment_user_info_please_lonin"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <AutoCompleteTextView
                    android:id="@+id/et_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/activity_login_username"
                    android:inputType="textEmailAddress"
                    android:maxLength="24"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_login"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_login"
                    android:ellipsize="end"
                    android:hint="@string/activity_login_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLength="24"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignEnd="@+id/til_password"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/til_password"
                android:layout_below="@+id/til_password"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_login"
                android:clickable="true"
                android:padding="0dp"
                android:text="@string/activity_login_login"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/activity_login_register"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignTop="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_technical_support"
                android:layout_below="@+id/btn_register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technical_support"
                android:textColor="@color/white"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tv_follow_public_number"
                android:layout_below="@id/tv_technical_support"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow_public_number"
                android:textColor="@color/white"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tv_send_msg_to_public_number"
                android:layout_below="@id/tv_follow_public_number"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_msg_to_public_number"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>