<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="#222831"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/drawable_ugc_record"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"
            android:text="@string/video_record_title"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_chorus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/drawable_ugc_followrecord"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"
            android:text="@string/chorus_title"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_editer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/drawable_ugc_editer"
            android:gravity="center_horizontal"
            android:text="@string/video_editer_title"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/drawable_ugc_pic"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"
            android:text="@string/picture_editer_title"
            android:textColor="@color/white"
            android:textSize="14dp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:src="@drawable/drawable_ugc_close" />
    </FrameLayout>

</RelativeLayout>